ページデザインの修正

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -7,8 +7,12 @@
 </head>
 
 <body>
-  <a href="/login">掲示板</a><br>
-  <a href="/register">新規登録</a><br>
+  <h1>掲示板アプリケーションです! </h1>
+  スレッド一覧の表示
+  <a href="/login">スレッド一覧へ</a><br><br>
+  ユーザーの新規登録
+  <a href="/register">新規登録</a><br><br>
+  ユーザー名の変更
   <a href="/modify">登録内容変更</a>
 </body>
 
