--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -12,7 +12,7 @@
   <a href="/login">スレッド一覧へ</a><br><br>
   ユーザーの新規登録
   <a href="/register">新規登録</a><br><br>
-  ユーザー名の変更
+  ユーザー情報の変更
   <a href="/modify">登録内容変更</a>
 </body>
 
